[package]
name = "tokio-serial"
version = "4.3.4"
authors = ["Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "A serial port implementation for tokio"
license = "MIT"
homepage = "https://github.com/berkowski/tokio-serial"
repository = "https://github.com/berkowski/tokio-serial"
documentation = "http://docs.rs/tokio-serial"
readme = "README.md"
keywords = ["rs232", "serial", "tokio"]
categories = ["asynchronous", "hardware-support"]
edition = "2018"

[badges]
appveyor = { repository = "berkowski/tokio-serial", service = "github" }
travis-ci = { repository = "berkowski/tokio-serial", service = "github" }

[features]
default = ["libudev"]
libudev = ["mio-serial/libudev"]

[dependencies]
tokio = { version = "1.27", features = ["io-util", "net"], default-features = false }
mio-serial = { git = "https://github.com/iostat/mio-serial", rev = "ee6f2ef12a6afebfb8b529f1e983d217a57006c7", default-features = false }

[dev-dependencies]
futures = "0.3.1"
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"], default-features = false }
tokio-util = { version = "0.6.0", features = ["codec"], default-features = false }
bytes = "1.0.0"
